[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploysentry"
version = "0.1.0"
description = "Defensive web surface and deployment exposure monitor"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "DeploySentry"}]
dependencies = [
  "textual>=0.70.0",
  "rich>=13.7.0",
  "httpx[socks]>=0.27.0",
  "dnspython>=2.6.0",
  "pydantic>=2.7.0",
  "jinja2>=3.1.0",
  "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
fast = ["aiodns>=3.2.0", "uvloop>=0.19.0"]
socks = ["httpx[socks]>=0.27.0"]

[project.scripts]
deploysentry = "deploysentry.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deploysentry*"]

[tool.setuptools.package-data]
deploysentry = ["*.tcss", "data/*.json"]
